chore: simplify code in health check